testsuite/tests/indexed-types/should_fail/ExplicitForAllFams4a.stderr

ExplicitForAllFams4a.hs:7:12: error:
    • Type variable ‘b’ is bound by a forall,
        but not used in the family instance
    • In the equations for closed type family ‘H’
      In the type family declaration for ‘H’

ExplicitForAllFams4a.hs:8:10: error:
    • Type variable ‘b’ is mentioned in the RHS,
        but not bound on the LHS of the family instance
    • In the equations for closed type family ‘H’
      In the type family declaration for ‘H’
